--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,19 +1,11 @@
-<div class="page-header">
-        <h1><a href="/">Django Girls Blog</a></h1>
-    </div>
-    <div class="post">
-        <p>published: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
-    </div>
 .page-header {
         background-color: #ff9400;
         margin-top: 0;
         padding: 20px 20px 20px 40px;
     }
 
-    .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-        color: #ffffff;
+.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
+        color: #262626;
         font-size: 36pt;
         text-decoration: none;
     }
@@ -40,7 +32,7 @@
     }
 
     .top-menu, .top-menu:hover, .top-menu:visited {
-        color: #ffffff;
+        color: #357ebd;
         float: right;
         font-size: 26pt;
         margin-right: 20px;
